# ez-audi

./: .gitignore  Cargo.toml  README.md
src/: audio_codec.rs  errors.rs  lib.rs  traits.rs
src/audio_codecs/: l_pcm.rs  mod.rs
src/cpal_abstraction/: config.rs  device.rs  mod.rs  sample_writer.rs  samples.rs  stream.rs
src/cpal_abstraction/samples/: get_real_sample_type.rs  mod.rs  modifiers.rs  sample.rs  samples.rs  samples_player.rs
src/modifiers/: flatten.rs  loop.rs  mod.rs  shittify.rs  utils.rs
src/samples_player/: exact_samples_player.rs  mod.rs  samples_player.rs  samples_player_trait.rs
src/samples_player/modifiers/: mod.rs  utils.rs  volume.rs
src/wav/: mod.rs  utils.rs  wav_audio.rs  wav_audio_formats.rs
