[package]
name = "ez-audi"
version = "0.1.0"
edition = "2021"
description = "A lightweight (to be cross-platform/wasm-compilable(?)) audio library based on cpal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.15.2" }