[package]
name = "ez-audi"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["AtmolanderMimi <skylandersmimi@gmail.com>"]
description = "A lightweight (to be cross-platform/wasm-compilable(?)) audio library based on cpal"
categories = ["multimedia", "multimedia::audio"]
keywords = ["audio", "wav", "playback", "abstraction", "easy"]

exclude = ["/test_assets", "/src/bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "0.15.2" }